# HiddenClockInTaskMgr

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Clock/: Source.cpp
Injector/: HideClock.cpp  detours.h
Main/: Source.cpp
